--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -62,7 +62,9 @@
 }
 
 .todos__heading {
-  font-size: 30px;
+  font-size: 35px;
+  color: white;
+  text-align: center;
 }
 
 .todos__single {
@@ -76,7 +78,6 @@
 
 .todos__single:hover {
   box-shadow: 0 0 5px black;
-  transform: scale(1.03);
 }
 
 .todos__single--text {
@@ -85,6 +86,7 @@
   border: none;
   font-size: 20px;
 }
+
 
 .todos__single--text:focus {
   outline: none;
